<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
              android:background="#ffc7bfbd">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/app_name"
                android:id="@+id/textView"
                android:gravity="center_horizontal"
                android:layout_marginBottom="15dip"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dip">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/optionB1"
                        android:src="@mipmap/icon_msm"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        android:paddingLeft="40dip"
                        android:paddingRight="40dip"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/mainmenu1"
                        android:id="@+id/textView6"
                        android:gravity="center_horizontal"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/optionB2"
                        android:src="@mipmap/icon_file"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        android:paddingLeft="40dip"
                        android:paddingRight="40dip"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/mainmenu2"
                        android:id="@+id/textView7"
                        android:gravity="center_horizontal"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dip">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/optionB3"
                        android:src="@mipmap/icon_photo"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        android:paddingLeft="40dip"
                        android:paddingRight="40dip"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/mainmenu3"
                        android:id="@+id/textView2"
                        android:gravity="center_horizontal"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/optionB4"
                        android:src="@mipmap/icon_video"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        android:paddingLeft="40dip"
                        android:paddingRight="40dip"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/mainmenu4"
                        android:id="@+id/textView3"
                        android:gravity="center_horizontal"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dip">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/optionB5"
                        android:src="@mipmap/icon_voice"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        android:paddingLeft="40dip"
                        android:paddingRight="40dip"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/mainmenu5"
                        android:id="@+id/textView4"
                        android:gravity="center_horizontal"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/optionB6"
                        android:src="@mipmap/icon_sql"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        android:paddingLeft="40dip"
                        android:paddingRight="40dip"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/mainmenu6"
                        android:id="@+id/textView5"
                        android:gravity="center_horizontal"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dip">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/optionB7"
                        android:src="@mipmap/icon_key"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        android:paddingLeft="40dip"
                        android:paddingRight="40dip"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/mainmenu7"
                        android:id="@+id/textView11"
                        android:gravity="center_horizontal"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/optionB8"
                        android:src="@mipmap/ic_launcher"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        android:paddingLeft="40dip"
                        android:paddingRight="40dip"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/mainmenu8"
                        android:id="@+id/textView12"
                        android:gravity="center_horizontal"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dip">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/optionB10"
                        android:src="@mipmap/icon_about"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        android:paddingLeft="40dip"
                        android:paddingRight="40dip"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/menuOptionAbout"
                        android:id="@+id/textView14"
                        android:gravity="center_horizontal"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
